// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBottomRightRadius renders 0 1`] = `
Array [
  .c0 {
  border-bottom-right-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders function 1`] = `
Array [
  .c0 {
  border-bottom-right-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders invalid theme path 1`] = `
Array [
  .c0 {
  border-bottom-right-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders negative number 1`] = `
Array [
  .c0 {
  border-bottom-right-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-right-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-right-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-right-radius: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-right-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-right-radius: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-bottom-right-radius: July;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: August;
  }
}

@media January {
  .c0 {
    border-bottom-right-radius: September;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: November;
  }
}

@media June {
  .c0 {
    border-bottom-right-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-bottom-right-radius: July;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: August;
  }
}

@media January {
  .c0 {
    border-bottom-right-radius: September;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: November;
  }
}

@media June {
  .c0 {
    border-bottom-right-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-right-radius: January;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: December;
  }
}

@media January {
  .c0 {
    border-bottom-right-radius: April;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: May;
  }
}

@media June {
  .c0 {
    border-bottom-right-radius: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-right-radius: January;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: December;
  }
}

@media January {
  .c0 {
    border-bottom-right-radius: April;
  }
}

@media April {
  .c0 {
    border-bottom-right-radius: May;
  }
}

@media June {
  .c0 {
    border-bottom-right-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders postitive number 1`] = `
Array [
  .c0 {
  border-bottom-right-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders string 1`] = `
Array [
  .c0 {
  border-bottom-right-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomRightRadius renders valid theme path 1`] = `
Array [
  .c0 {
  border-bottom-right-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-right-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
